# ld56

./: .gitmodules  engine.cpp  engine.hpp  input_manager.cpp  input_manager.hpp  main.cpp  meson.build  meson.options  readme.md  renderer.cpp  renderer.hpp  swapchain.cpp  swapchain.hpp  texture_loader.cpp  texture_loader.hpp
shaders/: meson.build  test.fs.glsl  test.vs.glsl
textures/: meson.build
