texture_files = [
  'blank.png',
  'GubgubSpriteBack.png',
  'GubgubSpriteFront.png',
  'GubgubSpriteSideLeft.png',
  'GubgubSpriteSideRight.png',
  'NubnubSpriteBack.png',
  'NubnubSpriteFront.png',
  'NubnubSpriteSideLeft.png',
  'NubnubSpriteSideRight.png',
]

foreach file : texture_files
  configure_file(copy: true,
    input: file,
    output: file)
endforeach
