texture_files = [
  'blank.png',
  'Dotline1.png',
  'Dotline2.png',
  'Dotline3.png',
  'Dotline4.png',
  'GubgubSpriteBack.png',
  'GubgubSpriteFront.png',
  'GubgubSpriteSideLeft.png',
  'GubgubSpriteSideRight.png',
  'NNBackDown.png',
  'NNBackUp.png',
  'NNFrontDown.png',
  'NNFrontUp.png',
  'NNFrontUpBlink.png',
  'NNLeftDown.png',
  'NNLeftUp.png',
  'NNLeftUpBlink.png',
  'NNRightDown.png',
  'NNRightUp.png',
  'NNRightUpBlink.png',
  'Zap1.png',
  'Zap2.png',
  'Zap3.png',
  'Zap4.png',
  'Zap5.png',
  'Zap6.png',
]

foreach file : texture_files
  configure_file(copy: true,
    input: file,
    output: file)
endforeach
