texture_files = [
  'Dotline1.png',
  'Dotline2.png',
  'Dotline3.png',
  'Dotline4.png',
  'BBBackDown1.png',
  'BBBackDown2.png',
  'BBBackUp1.png',
  'BBBackUp2.png',
  'BBFrontDown1.png',
  'BBFrontDown2.png',
  'BBFrontUp1.png',
  'BBFrontUp2.png',
  'BBFrontUp2Blink.png',
  'BBSideDown1.png',
  'BBSideDown2.png',
  'BBSideUp1.png',
  'BBSideUp2.png',
  'BBSideUp2Blink.png',
  'GGBackDown1.png',
  'GGBackDown2.png',
  'GGBackUp1.png',
  'GGBackUp2.png',
  'GGFrontDown1.png',
  'GGFrontDown2.png',
  'GGFrontUp1.png',
  'GGFrontUp2.png',
  'GGFrontUp2Blink.png',
  'GGSideDown1.png',
  'GGSideDown2.png',
  'GGSideUp1.png',
  'GGSideUp2.png',
  'GGSideUp2Blink.png',
  'GGSleepy1.png',
  'GGSleepy2.png',
  'GGSleepy3.png',
  'GGSleepy4.png',
  'GGSleepy5.png',
  'GGSleepy6.png',
  'NNBackDown1.png',
  'NNBackDown2.png',
  'NNBackUp1.png',
  'NNBackUp2.png',
  'NNFrontDown1.png',
  'NNFrontDown2.png',
  'NNFrontUp1.png',
  'NNFrontUp2.png',
  'NNFrontUp2Blink.png',
  'NNSideDown1.png',
  'NNSideDown2.png',
  'NNSideUp1.png',
  'NNSideUp2.png',
  'NNSideUp2Blink.png',
  'NNSleepy1.png',
  'NNSleepy2.png',
  'NNSleepy3.png',
  'NNSleepy4.png',
  'NNSleepy5.png',
  'NNSleepy6.png',
  'Transform1.png',
  'Transform2.png',
  'Transform3.png',
  'Transform4.png',
  'Transform5.png',
  'Transform6.png',
  'Zap1.png',
  'Zap2.png',
  'Zap3.png',
  'Zap4.png',
  'Zap5.png',
  'Zap6.png',
  'ZapHit1.png',
  'ZapHit2.png',
  'ZapHit3.png',
  'ZapHit4.png',
  'ZapHit5.png',
  'ZapHit6.png',
  'arrow.png',
  'blank.png',
  'font.png',
]

foreach file : texture_files
  configure_file(copy: true,
    input: file,
    output: file)
endforeach
